# 2019-hardware-miniproject

./: .travis.yml  CaptureAndCount.py  CaptureMotion.py  CountMotion.m  CountMotion.py  PrintHDF5variables.py  PrintStats.py  README.md  config.ini  connected_components.py  countlanes.m  docount.m  globplot.py  hdf2avi.py  motdet.m  motdet.py  playmovie.py  publish_all.m  setup.cfg  test_count.py  test_motion.m  write_file.py
.github/workflows/: ci.yml  ci_octave.yml  ci_python.yml
data/: README.md  motion.h5  motion.h5.lz  motion_hand.h5
examples/: CountMotion.m  hdf2avi.py  playmovie.py
