[metadata]
name = dsutils
version = 1.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
license_file =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
zip_safe = False
packages = find:
install_requires =
  numpy
  h5py
  imageio

[options.extras_require]
tests =
  pytest >= 3.9
  flake8
  mypy
